fix font sizes on mobile

--- a/src/css/intro.styl
+++ b/src/css/intro.styl
@@ -7,4 +7,9 @@
 		line-height: 1 !important;
 		margin: 0 !important;
 	}
+	@media (max-width: ($module_max_width+1)) {
+		h2 {
+			font-size: 15px !important;
+		}
+	}
 }
