--- a/src/css/outro.styl
+++ b/src/css/outro.styl
@@ -28,11 +28,19 @@
 		font-size: 22px !important;
 		line-height: 1.25 !important;
 		margin-bottom: 10% !important;
+		
+		@media (max-width: ($module_max_width+1)) {
+			font-size: 20px !important;
+		}
 	}
 	h4 {
 		font-size: 18px !important;
 		line-height: 1.2 !important;
 		margin-bottom: 15px !important;
+		
+		@media (max-width: ($module_max_width+1)) {
+			font-size: 15px !important;
+		}
 	}
 	
 	.caf-network_logo {
